# auto-attack-ascon-cryptanalysis

./: .gitignore  FINAL_REPORT.md  PROJECT_DOCUMENTATION.md  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
adaptive-cryptanalysis-core/: ascon128_reference.c
intelligent-attack-pipeline/: README.md  requirements.txt
intelligent-attack-pipeline/config/: attack_config.yaml
intelligent-attack-pipeline/phase_2/: README.md
intelligent-attack-pipeline/phase_2/ascon128-c/: Makefile  flash.ld
intelligent-attack-pipeline/phase_2/ascon128-c/inc/: ascon_aead128.h
intelligent-attack-pipeline/phase_2/ascon128-c/src/: ascon_aead128.c  ascon_wrapper.c
intelligent-attack-pipeline/results/phase3/: fixed_dataset_doc.md  variable_dataset_doc.md
intelligent-attack-pipeline/scripts/: attack_fix_key.py  attack_fixed_key.py  attack_variable_key.py  comparative_analysis.py  compare_models.py  generate_phase4_report.py  generate_traces_rainbow.py  run_attack.py  verify_dataset.py
intelligent-attack-pipeline/src/: __init__.py
intelligent-attack-pipeline/src/attacks/: __init__.py  key_recovery.py  phase4_core.py
intelligent-attack-pipeline/src/dataset/: __init__.py  generator.py
intelligent-attack-pipeline/src/models/: __init__.py  cnn.py  mlp.py
intelligent-attack-pipeline/src/utils/: __init__.py  metrics.py  metrics_fixed.py
phase_2/ascon128-c/: Makefile  flash.ld
phase_2/ascon128-c/inc/: ascon_aead128.h
phase_2/ascon128-c/src/: ascon_minimal.c  ascon_wrapper.c
(+1 files in other folders)
